--- a/ansible/install_infra/roles/glusterfs-server-install/vars/main.yml
+++ b/ansible/install_infra/roles/glusterfs-server-install/vars/main.yml
@@ -7,5 +7,10 @@ gluster_ufw_applications:
     ports: "24007,24008,49152:49664/tcp"
     rule: allow
     #src: 192.168.100.0/24
+  - name: prometheus_gluster_exporter
+    title: Prometheus Gluster Exporter
+    description: Prometheus Gluster Exporter
+    ports: 8090/tcp
+    rule: allow
 
 gluster_prometheus_exporter_go_path: /opt/gluster-exporter
