--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/dashboards/custom/ingress-nginx-request-handling-performance.json
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/dashboards/custom/ingress-nginx-request-handling-performance.json
@@ -913,6 +913,16 @@
     "templating": {
         "list": [
             {
+                "hide": 2,
+                "label": "datasource",
+                "name": "DS_PROMETHEUS",
+                "options": [],
+                "query": "prometheus",
+                "refresh": 1,
+                "regex": "",
+                "type": "datasource"
+            },
+            {
                 "allValue": ".*",
                 "current": {},
                 "datasource": "${DS_PROMETHEUS}",
