--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/tasks/main.yml
@@ -51,3 +51,35 @@
     - "{{ role_path }}/app/deploy/prometheus_exporter/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
+
+- name: Wait for ElasticSearch to be available
+  k8s_info:
+    kind: StatefulSet
+    namespace: "{{ elasticsearch.namespace }}"
+    name: elasticsearch
+  register: k8s_result
+  become: yes
+  become_user: "{{ kubernetes_user.name }}"
+  until: k8s_result.resources[0].status.readyReplicas | default(0) > 0
+  retries: 60
+  delay: 3
+
+# On first start, ElasticSearch restarts to run its setup process
+# So if the first wait task has waited, we make sure it's really still up a few seconds later
+- name: Wait a bit ...
+  pause:
+    seconds: 10
+  when: k8s_result.attempts > 1
+
+- name: Wait for ElasticSearch to be available
+  k8s_info:
+    kind: StatefulSet
+    namespace: "{{ elasticsearch.namespace }}"
+    name: elasticsearch
+  register: k8s_result
+  become: yes
+  become_user: "{{ kubernetes_user.name }}"
+  until: k8s_result.resources[0].status.readyReplicas | default(0) > 0
+  retries: 60
+  delay: 3
+
