Create an elasticsearch admin user

--- a/ansible/install_applications/vars/logging-elasticsearch.yml
+++ b/ansible/install_applications/vars/logging-elasticsearch.yml
@@ -40,7 +40,11 @@ elasticsearch:
   # TODO : these user / passwords can't easily be changed without wiping the ES cluster.
   # We probably need to run /usr/share/elasticsearch/plugins/opendistro_security/tools/securityadmin.sh inside the container
   internal_users: "{{ elasticsearch_internal_users | default([]) }}"
-  
+
+  admin_user:
+    user: "{{ elasticsearch_admin_user_user | default('admin') }}"
+    password: "{{ elasticsearch_admin_user_password | default(['password']) }}"
+
   ldap:
     servername: "{{ elasticsearch_ldap_servername | default(openldap.ldap.servername) }}"
     manager_dn: "{{ elasticsearch_ldap_manager_dn | default(openldap.ldap.readonly_user_dn) }}"
