Add variables for fluentd plugins

--- a/ansible/install_applications/roles/logging-fluentd.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/tasks/main.yml
@@ -11,6 +11,11 @@
     base_image: "{{ fluentd.base_image }}"
     private_image: "{{ fluentd.container.image }}"
     build: yes
+    build_args:
+      fluent_plugin_elasticsearch_version: "{{ fluentd.plugins.elasticsearch.version }}"
+      fluent_plugin_ua_parser_version: "{{ fluentd.plugins.ua_parser.version }}"
+      fluent_plugin_uap_core_version: "{{ fluentd.plugins.uap_core.version }}"
+      fluent_plugin_geoip_version: "{{ fluentd.plugins.geoip.version }}"
 
 - name: List included config files
   set_fact:
