--- a/ansible/install_applications/vars/logging-fluentd.yml
+++ b/ansible/install_applications/vars/logging-fluentd.yml
@@ -27,4 +27,13 @@ fluentd:
     requests_memory: "{{ fluentd_container_requests_memory | default('200Mi') }}"
     limits_cpu: "{{ fluentd_container_limits_cpu | default('200m') }}"
     limits_memory: "{{ fluentd_container_limits_memory | default('200Mi') }}"
-    
+
+  plugins:
+    elasticsearch:
+      version: "3.8.0"
+    ua_parser:
+      version: "1.2.0"
+    uap_core:
+      version: "0.6.9"
+    geoip: 
+      version: "1.3.1"
