--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/tasks/main.yml
@@ -11,6 +11,12 @@
     base_image: "{{ kube_state_metrics.base_image }}"
     private_image: "{{ kube_state_metrics.container.image }}"
 
+- name: Ensure Kube State metrics rbac_proxy image is up-to-date in the private registry
+  import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
+  vars:
+    base_image: "{{ kube_state_metrics_rbac_proxy.base_image }}"
+    private_image: "{{ kube_state_metrics_rbac_proxy.container.image }}"
+
 - name: Deploy Kube State metrics
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
