Log ES 400 error reasons in fluentd

--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/config/includes/output_50_elasticsearch.conf
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/config/includes/output_50_elasticsearch.conf
@@ -2,6 +2,7 @@
    @type elasticsearch
    @id out_es
    @log_level info
+   log_es_400_reason true
    include_tag_key true
    host "#{ENV['FLUENT_ELASTICSEARCH_HOST']}"
    port "#{ENV['FLUENT_ELASTICSEARCH_PORT']}"
