Fix kubernetes log rejected in ES

--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/config/includes/filter-kubernetes.conf
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/config/includes/filter-kubernetes.conf
@@ -4,3 +4,10 @@
     Kube_URL            https://kubernetes.default.svc.cluster.local:443
     Merge_Log           Off
     K8S-Logging.Parser  On
+    K8S-Logging.Exclude Off
+
+[FILTER]
+    Name    lua
+    Match   kube.*
+    script  kubernetes_dedot.lua
+    call    dedot
