--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/config/includes/output_50_elasticsearch.conf
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/config/includes/output_50_elasticsearch.conf
@@ -14,6 +14,7 @@
    password "#{ENV['FLUENT_ELASTICSEARCH_PASSWORD']}"
    reload_connections "#{ENV['FLUENT_ELASTICSEARCH_RELOAD_CONNECTIONS'] || 'true'}"
    reconnect_on_error "#{ENV['FLUENT_ELASTICSEARCH_RECONNECT_ON_ERROR'] || 'false'}"
+   reload_on_failure "#{ENV['FLUENT_ELASTICSEARCH_RELOAD_ON_FAILURE'] || 'false'}"
    logstash_prefix "#{ENV['FLUENT_ELASTICSEARCH_LOGSTASH_PREFIX'] || 'logstash'}"
    logstash_format true
    type_name fluentd
