Fix local-lvm storage only run on controller

--- a/ansible/install_infra/roles/kubernetes-storage-distributed/meta/main.yml
+++ b/ansible/install_infra/roles/kubernetes-storage-distributed/meta/main.yml
@@ -3,7 +3,7 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Create kubernetes storage"
+  description: "Create kubernetes distributed storage"
   min_ansible_version: 2.7
   platforms:
   - name: Debian
