--- a/ansible/install_applications/roles/logging-fluentd.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/tasks/main.yml
@@ -13,6 +13,7 @@
     build: yes
     build_args:
       fluent_plugin_elasticsearch_version: "{{ fluentd.plugins.elasticsearch.version }}"
+      fluent_plugin_prometheus_version: "{{ fluentd.plugins.prometheus.version }}"
       fluent_plugin_ua_parser_version: "{{ fluentd.plugins.ua_parser.version }}"
       fluent_plugin_uap_core_version: "{{ fluentd.plugins.uap_core.version }}"
       fluent_plugin_geoip_version: "{{ fluentd.plugins.geoip.version }}"
