Enable mutual TLS between fluentbit and fluentd

--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/config/includes/output-fluentd.conf
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/config/includes/output-fluentd.conf
@@ -4,3 +4,8 @@
     Host            ${FLUENT_FLUENTD_HOST}
     Port            ${FLUENT_FLUENTD_PORT}
     Retry_Limit     False
+    tls             On
+    tls.verify      On
+    tls.ca_file     /fluent-bit/certs/ca.crt
+    tls.crt_file    /fluent-bit/certs/server.crt
+    tls.key_file    /fluent-bit/certs/server.key
