--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/config/includes/input_forward.conf
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/config/includes/input_forward.conf
@@ -3,4 +3,11 @@
   @type forward
   bind 0.0.0.0
   port 24224
+
+  <transport tls>
+    cert_path /fluentd/certs/server.crt
+    private_key_path /fluentd/certs/server.key
+    client_cert_auth true
+    ca_path /fluentd/certs/ca.crt
+  </transport>
 </source>
