--- a/ansible/install_applications/roles/logging-fluentd.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/tasks/main.yml
@@ -18,6 +18,15 @@
       fluent_plugin_uap_core_version: "{{ fluentd.plugins.uap_core.version }}"
       fluent_plugin_geoip_version: "{{ fluentd.plugins.geoip.version }}"
 
+- name: Read certificate files
+  slurp:
+    src: "{{ item }}"
+  register: fluentd_generated_certificate_files
+  with_items:
+    - "{{ custom_ssl_pki_root_dir }}/cluster/ca.crt"
+    - "{{ custom_ssl_pki_root_dir }}/cluster/fluentd/server.crt"
+    - "{{ custom_ssl_pki_root_dir }}/cluster/fluentd/server.key"
+
 - name: List included config files
   set_fact:
     fluentd_included_config_files: "{{ fluentd_included_config_files | default([]) + [ item ] }}"
