Secure fluent with a shared key

--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/config/includes/output-fluentd.conf
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/config/includes/output-fluentd.conf
@@ -4,6 +4,7 @@
     Host            ${FLUENT_FLUENTD_HOST}
     Port            ${FLUENT_FLUENTD_PORT}
     Retry_Limit     False
+    Shared_Key      ${FLUENT_FLUENTD_SHARED_KEY}
     tls             On
     tls.verify      On
     tls.ca_file     /fluent-bit/certs/ca.crt
