--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/config/includes/input_forward.conf
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/config/includes/input_forward.conf
@@ -4,6 +4,11 @@
   bind 0.0.0.0
   port 24224
 
+  <security>
+    self_hostname "#{ENV['FLUENT_SELF_HOSTNAME']}"
+    shared_key "#{ENV['FLUENT_SHARED_KEY']}"
+  </security>
+
   <transport tls>
     cert_path /fluentd/certs/server.crt
     private_key_path /fluentd/certs/server.key
