--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/tasks/main.yml
@@ -89,7 +89,10 @@
       # By default, an index is created with 1 replica.
       # If we only have 1 node, this index will remain yellow
       number_of_replicas: "{{ (elasticsearch.replicas|int > 1) | ternary(1, 0) }}"
-      #number_of_shards: 1
+      # After 30 seconds without search, an index is flagged idle and not refresh automatically
+      # Our prometheus exporter won't see new documents and trigger a ElasticNoNewDocuments alert when this happens
+      # To avoid that, we force the scheduled refresh
+      refresh_interval: "10s"
 
 - name: Get current default ElasticSearch index template
   uri:
