Use a custom image for jellyfin

--- a/ansible/install_applications/roles/stream-jellyfin.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/stream-jellyfin.deploy/tasks/main.yml
@@ -11,6 +11,7 @@
   vars:
     base_image: "{{ jellyfin.base_image }}"
     private_image: "{{ jellyfin.container.image }}"
+    build: yes
 
 - name: Deploy Jellyfin
   k8s:
