--- a/ansible/install_infra/roles/kubernetes-infra/app/ingress-nginx/deploy/service-prometheus.yaml
+++ b/ansible/install_infra/roles/kubernetes-infra/app/ingress-nginx/deploy/service-prometheus.yaml
@@ -13,4 +13,5 @@ spec:
     targetPort: 10254
   selector:
     app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx
+    app.kubernetes.io/component: controller
