--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-storage.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-storage.alerts.yaml
@@ -1,11 +1,11 @@
 - name: kubernetes-storage.alerts
   rules:
-  - alert: KubePersistentVolumeUsageCritical
+  - alert: KubePersistentVolumeFillingUp
     annotations:
       message: The PersistentVolume claimed by {{ $labels.persistentvolumeclaim }}
         in Namespace {{ $labels.namespace }} is only {{ $value | humanizePercentage
         }} free.
-      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumeusagecritical
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumefillingup
     expr: |
       kubelet_volume_stats_available_bytes{job="kubelet", metrics_path="/metrics"}
         /
@@ -14,12 +14,12 @@
     for: 1m
     labels:
       severity: critical
-  - alert: KubePersistentVolumeFullInFourDays
+  - alert: KubePersistentVolumeFillingUp
     annotations:
       message: Based on recent sampling, the PersistentVolume claimed by {{ $labels.persistentvolumeclaim
         }} in Namespace {{ $labels.namespace }} is expected to fill up within four
         days. Currently {{ $value | humanizePercentage }} is available.
-      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumefullinfourdays
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumefillingup
     expr: |
       (
         kubelet_volume_stats_available_bytes{job="kubelet", metrics_path="/metrics"}
@@ -30,7 +30,7 @@
       predict_linear(kubelet_volume_stats_available_bytes{job="kubelet", metrics_path="/metrics"}[6h], 4 * 24 * 3600) < 0
     for: 1h
     labels:
-      severity: critical
+      severity: warning
   - alert: KubePersistentVolumeErrors
     annotations:
       message: The persistent volume {{ $labels.persistentvolume }} has status {{
