--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/node-exporter.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/node-exporter.alerts.yaml
@@ -152,10 +152,51 @@
       severity: warning
   - alert: NodeHighNumberConntrackEntriesUsed
     annotations:
-      description: '{{ $value | humanizePercentage }} of conntrack entries are used'
+      description: '{{ $value | humanizePercentage }} of conntrack entries are used.'
       runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-nodehighnumberconntrackentriesused
-      summary: Number of conntrack are getting close to the limit
+      summary: Number of conntrack are getting close to the limit.
     expr: |
       (node_nf_conntrack_entries / node_nf_conntrack_entries_limit) > 0.75
+    labels:
+      severity: warning
+  - alert: NodeTextFileCollectorScrapeError
+    annotations:
+      description: Node Exporter text file collector failed to scrape.
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-nodetextfilecollectorscrapeerror
+      summary: Node Exporter text file collector failed to scrape.
+    expr: |
+      node_textfile_scrape_error{job="node-exporter"} == 1
+    labels:
+      severity: warning
+  - alert: NodeClockSkewDetected
+    annotations:
+      message: Clock on {{ $labels.instance }} is out of sync by more than 300s. Ensure
+        NTP is configured correctly on this host.
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-nodeclockskewdetected
+      summary: Clock skew detected.
+    expr: |
+      (
+        node_timex_offset_seconds > 0.05
+      and
+        deriv(node_timex_offset_seconds[5m]) >= 0
+      )
+      or
+      (
+        node_timex_offset_seconds < -0.05
+      and
+        deriv(node_timex_offset_seconds[5m]) <= 0
+      )
+    for: 10m
+    labels:
+      severity: warning
+  - alert: NodeClockNotSynchronising
+    annotations:
+      message: Clock on {{ $labels.instance }} is not synchronising. Ensure NTP is
+        configured on this host.
+      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-nodeclocknotsynchronising
+      summary: Clock not synchronising.
+    expr: |
+      min_over_time(node_timex_sync_status[5m]) == 0
+    for: 10m
     labels:
       severity: warning
