--- a/ansible/install_infra/roles/kubernetes-infra/app/ingress-nginx/deploy/mandatory.yaml
+++ b/ansible/install_infra/roles/kubernetes-infra/app/ingress-nginx/deploy/mandatory.yaml
@@ -15,12 +15,23 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
     app.kubernetes.io/component: controller
   name: ingress-nginx
   namespace: ingress-nginx
 ---
 # Source: ingress-nginx/templates/controller-configmap.yaml
+#apiVersion: v1
+#kind: ConfigMap
+#metadata:
+#  labels:
+#    app.kubernetes.io/name: ingress-nginx
+#    app.kubernetes.io/instance: ingress-nginx
+#    app.kubernetes.io/version: 0.32.0
+#    app.kubernetes.io/component: controller
+#  name: ingress-nginx-controller
+#  namespace: ingress-nginx
+#data:
 ---
 # Source: ingress-nginx/templates/clusterrole.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -29,7 +40,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
   name: ingress-nginx
   namespace: ingress-nginx
 rules:
@@ -98,7 +109,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
   name: ingress-nginx
   namespace: ingress-nginx
 roleRef:
@@ -117,7 +128,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
     app.kubernetes.io/component: controller
   name: ingress-nginx
   namespace: ingress-nginx
@@ -210,7 +221,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
     app.kubernetes.io/component: controller
   name: ingress-nginx
   namespace: ingress-nginx
@@ -230,7 +241,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
     app.kubernetes.io/component: controller
   name: ingress-nginx-controller-admission
   namespace: ingress-nginx
@@ -246,6 +257,31 @@ spec:
     app.kubernetes.io/component: controller
 ---
 # Source: ingress-nginx/templates/controller-service.yaml
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  labels:
+#    app.kubernetes.io/name: ingress-nginx
+#    app.kubernetes.io/instance: ingress-nginx
+#    app.kubernetes.io/version: 0.32.0
+#    app.kubernetes.io/component: controller
+#  name: ingress-nginx-controller
+#  namespace: ingress-nginx
+#spec:
+#  type: NodePort
+#  ports:
+#    - name: http
+#      port: 80
+#      protocol: TCP
+#      targetPort: http
+#    - name: https
+#      port: 443
+#      protocol: TCP
+#      targetPort: https
+#  selector:
+#    app.kubernetes.io/name: ingress-nginx
+#    app.kubernetes.io/instance: ingress-nginx
+#    app.kubernetes.io/component: controller
 ---
 # Source: ingress-nginx/templates/controller-deployment.yaml
 apiVersion: apps/v1
@@ -254,7 +290,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
     app.kubernetes.io/component: controller
   name: ingress-nginx-controller
   namespace: ingress-nginx
@@ -276,7 +312,7 @@ spec:
       dnsPolicy: ClusterFirst
       containers:
         - name: controller
-          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.31.1
+          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.32.0
           imagePullPolicy: Always
           lifecycle:
             preStop:
@@ -362,7 +398,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
     app.kubernetes.io/component: admission-webhook
   name: ingress-nginx-admission
   namespace: ingress-nginx
@@ -397,7 +433,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
     app.kubernetes.io/component: admission-webhook
   namespace: ingress-nginx
 rules:
@@ -420,7 +456,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
     app.kubernetes.io/component: admission-webhook
   namespace: ingress-nginx
 roleRef:
@@ -443,7 +479,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
     app.kubernetes.io/component: admission-webhook
   namespace: ingress-nginx
 spec:
@@ -453,12 +489,12 @@ spec:
       labels:
         app.kubernetes.io/name: ingress-nginx
         app.kubernetes.io/instance: ingress-nginx
-        app.kubernetes.io/version: 0.31.1
+        app.kubernetes.io/version: 0.32.0
         app.kubernetes.io/component: admission-webhook
     spec:
       containers:
         - name: create
-          image: jettech/kube-webhook-certgen:v1.0.0
+          image: jettech/kube-webhook-certgen:v1.2.0
           imagePullPolicy: IfNotPresent
           args:
             - create
@@ -482,7 +518,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
     app.kubernetes.io/component: admission-webhook
   namespace: ingress-nginx
 spec:
@@ -492,12 +528,12 @@ spec:
       labels:
         app.kubernetes.io/name: ingress-nginx
         app.kubernetes.io/instance: ingress-nginx
-        app.kubernetes.io/version: 0.31.1
+        app.kubernetes.io/version: 0.32.0
         app.kubernetes.io/component: admission-webhook
     spec:
       containers:
         - name: patch
-          image: jettech/kube-webhook-certgen:v1.0.0
+          image: jettech/kube-webhook-certgen:v1.2.0
           imagePullPolicy:
           args:
             - patch
@@ -523,7 +559,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
     app.kubernetes.io/component: admission-webhook
   namespace: ingress-nginx
 rules:
@@ -546,7 +582,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
     app.kubernetes.io/component: admission-webhook
   namespace: ingress-nginx
 roleRef:
@@ -569,6 +605,6 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/version: 0.32.0
     app.kubernetes.io/component: admission-webhook
   namespace: ingress-nginx
