Clean infra-gotify variables

--- a/ansible/inventories/vagrant/group_vars/all/apps/infra-gotify.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/infra-gotify.yml
@@ -2,14 +2,18 @@
 
 gotify_default_admin_password: Passw0rd
 
+gotify_standard_user:
+  name: user
+  password: Passw0rd
+
 gotify_homeassistant_enabled: True
-gotify_homeassistant_username: user
-gotify_homeassistant_password: Passw0rd
+gotify_homeassistant_username: "{{ gotify_standard_user.name }}"
+gotify_homeassistant_password: "{{ gotify_standard_user.password }}"
 gotify_homeassistant_application_name: HomeAssistant
 
 gotify_users:
-  - name: "{{ gotify_homeassistant_username }}"
-    password: "{{ gotify_homeassistant_password }}"
+  - name: "{{ gotify_standard_user.name }}"
+    password: "{{ gotify_standard_user.password }}"
     admin: False
     applications:
       - name: sample
